Added a color Picker for the color editor

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_blue: ^0.4.0
+  flutter_colorpicker: any
 
 dev_dependencies:
   flutter_test:
