--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_blue: ^0.4.0
   flutter_colorpicker: any
   mutex: ^1.0.1
+  shared_preferences: ^0.4.3
 
 dev_dependencies:
   flutter_test:
